--- a/web_dynamic/templates/101-hbnb.html
+++ b/web_dynamic/templates/101-hbnb.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+     <!-- HEAD -->
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Holberton AirBnB</title>
+
+    <!-- FAVICON -->
+
+    <link rel="shortcut icon" href="../static/images/icon.png?{{ cache_id }}">
+
+    <!-- **********************
+	 CSS styles
+	 ********************** -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/4-common.css') + '?{}'.format(cache_id) }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/3-header.css') + '?{}'.format(cache_id) }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/3-footer.css') + '?{}'.format(cache_id) }}">
